--- a/app_growth/templates/app_growth/all_growths.html
+++ b/app_growth/templates/app_growth/all_growths.html
@@ -117,25 +117,27 @@
         <a href uk-icon="icon: settings" uk-tooltip="Sortuj" style="margin-left: 5px"></a>
         <div class="uk-drop" uk-drop="mode: click; pos: bottom; offset: 5">
             <div class="uk-grid" style="margin-left: 55px; width: 8500px">
-                <a href="/growths/?filtering_by={{ sort_value }}&search={{ filter_value }}" style="color: {% if filtering_by == '' %} #4169E1 {% else %} gray {% endif %} ;">Filtruj po...</a>
-                <a href="/growths/?search={{ filter_value }}" style="color: {% if sort_value == '' %} #FF7F50 {% else %} gray {% endif %} ;">Domyślne</a>
-                <a href="/growths/?sort_by=growth&search={{ filter_value }}" style="color: {% if sort_value == 'growth' %} #FF7F50 {% else %} gray {% endif %} ;">Wzrost</a>
-                <a href="/growths/?sort_by=creation_date&search={{ filter_value }}" style="color: {% if sort_value == 'creation_date' %} #FF7F50 {% else %} gray {% endif %} ;">Data</a>
-                <a href="/growths/?sort_by=comments&search={{ filter_value }}" style="color: {% if sort_value == 'comments' %} #FF7F50 {% else %} gray {% endif %} ;">Uwagi</a>
+{#                <a href="/growths/" style="color: {% if sort_value == '' %} #FF7F50 {% else %} gray {% endif %} ;">Domyślne</a>#}
+                <a href="/growths/?sort_by=growth" style="color: {% if sort_value == 'growth' %} #FF7F50 {% else %} gray {% endif %} ;">Wzrost</a>
+                <a href="/growths/?sort_by=-creation_date" style="color: {% if sort_value == '-creation_date' %} #FF7F50 {% else %} gray {% endif %} ;">Data</a>
+                <a href="/growths/?sort_by=comments" style="color: {% if sort_value == 'comments' %} #FF7F50 {% else %} gray {% endif %} ;">Uwagi</a>
             </div>
         </div>
 
         <a href uk-icon="icon: search" uk-tooltip="Wyszukaj" style="margin-left: 5px"></a>
         <div class="uk-drop" uk-drop="mode: click; pos: right-center; offset: 5">
-            <form class="uk-search uk-width-1-1">
+            <form class="uk-search ">
                 <input name="search" class="uk-search-input" type="search"
-                       placeholder="Wyszukaj po Uwagach, 3-10 znaków." minlength="2" maxlength="10" aria-label="Search"
-                       autofocus>
+                       placeholder="Wyszukaj po 2-10 znaków." minlength="2" maxlength="10" aria-label="Search">
+                <div class=" uk-grid-small uk-child-width-auto uk-grid">
+                    <label><input class="uk-radio" type="radio" name="filtering_by" value="growth"> Wzrost</label>
+                    <label><input class="uk-radio" type="radio" name="filtering_by" value="comments" checked> Uwagi</label>
+                </div>
             </form>
         </div>
 
         {% if filter_value %}
-            <span style="color: #4169E1; margin-left: 20px">Zastosowany Filtr: </span>
+            <span style="color: #4169E1; margin-left: 390px">Zastosowany Filtr: </span>
             <span style="color: #FF7F50; margin-left: 5px"> {{ filter_value }} </span>
         {% endif %}
 
