poprawione filtrowanie i sortowanie

--- a/app_growth/templates/app_growth/growth_details.html
+++ b/app_growth/templates/app_growth/growth_details.html
@@ -38,6 +38,8 @@
                 <span>{{ growth.creation_date }}</span><br>
                 <span> <b>Data aktualizacji: </b> </span>
                 <span>{{ growth.update_date }}</span><br>
+                <span> <b>Ilość aktualizacji: </b> </span>
+                <span>{{ growth.cnt_modification }}</span><br>
                 <span> <b>Właściciel: </b> </span>
                 <span>{{ growth.owner }}</span><br>
                 <span> <b>Uwagi: </b> </span>
