--- a/app_pressure/templates/app_pressure/pressure_details.html
+++ b/app_pressure/templates/app_pressure/pressure_details.html
@@ -52,6 +52,8 @@
                 <span>{{ pressure.creation_date }}</span><br>
                 <span> <b>Data aktualizacji: </b> </span>
                 <span>{{ pressure.update_date }}</span><br>
+                <span> <b>Ilość aktualizacji: </b> </span>
+                <span>{{ pressure.cnt_modification }}</span><br>
                 <span> <b>Właściciel: </b> </span>
                 <span>{{ pressure.owner }}</span><br>
                 <span class="uk-text-break"> <b>Uwagi: </b> </span>
