--- a/app_pulse/templates/app_pulse/pulse_details.html
+++ b/app_pulse/templates/app_pulse/pulse_details.html
@@ -38,6 +38,8 @@
                 <span>{{ pulse.creation_date }}</span><br>
                 <span> <b>Data aktualizacji: </b> </span>
                 <span>{{ pulse.update_date }}</span><br>
+                <span> <b>Ilość aktualizacji: </b> </span>
+                <span>{{ pulse.cnt_modification }}</span><br>
                 <span> <b>Właściciel: </b> </span>
                 <span>{{ pulse.owner }}</span><br>
                 <span class="uk-text-break"> <b>Uwagi: </b> </span>
