--- a/app_weight/templates/app_weight/weight_details.html
+++ b/app_weight/templates/app_weight/weight_details.html
@@ -38,6 +38,8 @@
                 <span>{{ weight.creation_date }}</span><br>
                 <span> <b>Data aktualizacji: </b> </span>
                 <span>{{ weight.update_date }}</span><br>
+                <span> <b>Ilość aktualizacji: </b> </span>
+                <span>{{ weight.cnt_modification }}</span><br>
                 <span> <b>Właściciel: </b> </span>
                 <span>{{ weight.owner }}</span><br>
                 <span> <b>Uwagi: </b> </span>
