Gotowa struktura projektu

--- a/app_web/templates/app_web/info.html
+++ b/app_web/templates/app_web/info.html
@@ -44,6 +44,12 @@
                 <span uk-icon="icon: question; ratio: 1" uk-tooltip="Podpowiedź"></span>
                 <span class="uk-text-muted">Podpowidź</span>
                 <br>
+                <span uk-icon="icon: settings; ratio: 1" uk-tooltip="Sortuj"></span>
+                <span class="uk-text-muted">Sortowanie</span>
+                <br>
+                <span uk-icon="icon: search; ratio: 1" uk-tooltip="Wyszukaj"></span>
+                <span class="uk-text-muted">Wyszukiwanie zawartości</span>
+                <br>
                 <p></p>
                 <span class="uk-text-muted">Dane na wykresach można wyłączać naciskając na legędę.</span>
                 <br>
