Finalna wersja projektu 1.0

--- a/templates/404.html
+++ b/templates/404.html
@@ -26,6 +26,7 @@
 
 {#    <h2 class="uk-text-center uk-card-title">Dzienniczek Zdrowia</h2>#}
     <h2 class="uk-text-center uk-card-title">Error 404</h2>
+    <h3 class="uk-text-center uk-card-title"><a href=http://localhost:8000>Strona Głowna</a></h3>
 
     <img class="uk-align-center uk-margin-remove-adjacent uk-border-rounded" src="{% static 'background.JPG' %}"
          width="300" height="140">
